--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ pytz
 openai
 pypdf==5.2.0
 pgvector
-PyMuPDF
 
 # Document processing
 pdfplumber==0.10.3
 pytesseract==0.3.10
 Pillow
+
+# new
+PyMuPDF
