--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,13 @@ pytz
 openai
 pypdf==5.2.0
 pgvector
+fastapi-mail==1.4.1
+jinja2>=3.1.2
 
 # Document processing
 pdfplumber==0.10.3
 pytesseract==0.3.10
-Pillow
+Pillow==10.1.0
 
 # new
 PyMuPDF
